<resources>
    <string name="app_name">BizNoti0</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="hello_home_second">Hello HomeSecondFragment. Arg: %1$s</string>
    <string name="hello_dashboard_second">Hello HomeSecondFragment. Arg: %1$s</string>
    <string name="hello_notifications_second">Hello HomeSecondFragment. Arg: %1$s</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

    <string name="home_second">Home Second</string>


    <!--  page titles  -->
    <string name="home_title">Home</string>
    <string name="title_create">Create Post</string>
    <string name="title_notification">Notifications</string>
    <string name="title_profile">Profile</string>
    <string name="title_search">Search</string>

    <!--  string templates for each page    -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="create_post">Create Post</string>
    <string name="create_post_next">Create Post Next</string>


    <string name="home_page">Home Page</string>
    <string name="home_page_next">Home Page Next</string>

    <string name="notification">Notifications</string>
    <string name="notification_next">Notifications Next</string>

    <string name="profile_page">Profile</string>
    <string name="profile_next">Profile Next</string>

    <string name="search_page">Search</string>
    <string name="search_next">Search Next</string>


    <string name="chats">Chats</string>

    <string-array name="programming_languages">
        <item>C++</item>
        <item>C#</item>
        <item>Java</item>
        <item>Javascript</item>
        <item>Kotlin</item>
        <item>Python</item>
        <item>Ruby</item>
        <item>Swift</item>
        <item>TypeScript</item>
        <item>VisualStudioCode</item>
    </string-array>

    <string-array name="description">
        <item>C++ is a cool language</item>
        <item>C# is a cool language</item>
        <item>Java is a cool language</item>
        <item>Javascript is a cool language</item>
        <item>Kotlin is a cool language</item>
        <item>Python is a cool language</item>
        <item>Ruby is a cool language</item>
        <item>Swift is a cool language</item>
        <item>TypeScript is a cool language</item>
        <item>VisualStudioCode is a cool language</item>
    </string-array>

    <string name="must_go_tal">Must go, talk to you later</string>

    <!-- strings.xml -->
    <string name="some_id">18:21</string>

    <!-- strings.xml -->
    <string name="julia_semid">Julia Semid</string>

    <string name="james_dullm">James Dullmo</string>
    <string name="last_seen_2_hours_ago">last seen 2 hours ago</string>
    <string name="text_placeholder">Aa</string>
    <string name="none">none</string>

    <string name="room_status">status</string>
    <string name="permissions_needed">Camera and Microphone permissions needed. Please allow in App Settings for additional functionality.</string>
    <string name="error_retrieving_access_token">Error retrieving token</string>
    <string name="title_activity_settings">Settings</string>
    <string name="settings">Settings</string>
    <string name="codec_title">Set your preferred audio and video codec. Not all codecs are supported with Group rooms. The media server will fallback to OPUS or VP8 if a preferred codec is not supported.</string>
    <string name="pref_title_audio_codec">Audio Codec</string>
    <string name="pref_title_video_codec">Video Codec</string>
    <string name="sender_bandwidth_constraints">Set sender bandwidth constraints. Zero represents the WebRTC default value which varies by codec.</string>
    <string name="max_audio_bitrate">Max Audio Bitrate (bits per second)</string>
    <string name="max_video_bitrate">Max Video Bitrate (bits per second)</string>
    <string name="vp8_simulcast">VP8 Simulcast</string>
    <string name="audio_device">Audio Device</string>
    <string name="room_screen_select_device">Select Device</string>

</resources>
