<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        app:cardElevation="10dp"
        app:cardCornerRadius="2dp"
        app:cardPreventCornerOverlap="false">
    <androidx.constraintlayout.widget.ConstraintLayout
            xmlns:tools="http://schemas.android.com/tools"
            android:id="@+id/chat_list_p"
            android:layout_width="match_parent"
            android:layout_height="47dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="0dp"
            android:layout_marginTop="0dp">

        <ImageView
                android:id="@+id/blog_image"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:layout_marginTop="3dp"
                android:layout_marginBottom="4dp"
                android:background="@drawable/ic_launcher_background"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:contentDescription="@string/app_name"
                android:scaleType="fitXY"/>

        <TextView
                android:id="@+id/blog_title"
                android:layout_width="239dp"
                android:layout_height="22dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginStart="55dp"
                android:layout_marginTop="23dp"
                android:layout_marginBottom="2dp"
                android:alpha="0.5"
                android:gravity="top"
                android:text="@string/must_go_tal"
                android:textAppearance="@style/must_go_tal"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        <TextView
                android:id="@+id/blog_author"
                android:layout_width="102dp"
                android:layout_height="22dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginStart="55dp"
                android:text="@string/julia_semid"
                android:textAppearance="@style/julia_semid"
                android:gravity="top"
                android:alpha="0.7"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>
        <!-- time -->
        <TextView
                android:id="@+id/time"
                android:layout_width="40dp"
                android:layout_height="19dp"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="2dp"
                android:alpha="0.4"
                android:text="@string/some_id"
                android:textAppearance="@style/some_id"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>



