<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragmentChatLog"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="Fragments.ChatListFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/chat_log_back_button"
        android:layout_width="8dp"
        android:layout_height="16dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="46dp"
        android:layout_marginEnd="24dp"
        android:background="@drawable/ic_back"
        app:layout_constraintEnd_toStartOf="@+id/chat_header"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <!-- Chat Header -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/chat_header"
        android:layout_width="248dp"
        android:layout_height="45dp"
        android:layout_marginStart="68dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="98dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <TextView
            android:id="@+id/last_seen_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="55dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="19dp"
            android:layout_marginBottom="3dp"
            android:fontFamily="@font/space_mono"
            android:lines="1"
            android:text="@string/last_seen_2_hours_ago"
            android:alpha=".5"
            android:textSize="13sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/chat_header_name_layout" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/chat_header_name_layout"
            android:layout_width="0dp"
            android:layout_height="18dp"
            android:layout_marginStart="15dp"
            android:layout_marginBottom="27dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/chat_header_profile_image"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/chat_header_user_text"
                android:layout_width="0dp"
                android:layout_height="30dp"
                android:layout_alignParentTop="true"
                android:layout_alignParentBottom="true"
                android:alpha="0.9"
                android:fontFamily="@font/space_mono"
                android:gravity="top"

                android:lineSpacingExtra="0sp"
                android:text="@string/james_dullm"
                android:textAppearance="@style/chat_history_header"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/chat_header_profile_image"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginTop="1dp"
            android:layout_marginEnd="208dp"
            android:layout_marginBottom="4dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />




    </androidx.constraintlayout.widget.ConstraintLayout>

    <!-- Frame -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/chat_log_recycler_view"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="101dp"
        android:layout_marginBottom="32dp"
        app:layout_constraintBottom_toTopOf="@+id/text_field"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- Type text field -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/text_field"
        android:layout_width="304dp"
        android:layout_height="46dp"

        android:layout_marginStart="36dp"
        android:layout_marginEnd="74dp"
        android:layout_marginBottom="36dp"
        android:background="@drawable/chat_ui_text_field_bg"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/chat_log_recycler_view">


        <!-- Nav Icons / Attachment -->
        <EditText
            android:id="@+id/text_field_placeholder"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="12dp"
            android:background="@android:color/transparent"
            android:ems="10"
            android:inputType="text"
            android:text="@string/text_placeholder"
            android:textColor="#4D000000"
            android:textSize="15sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/nav_icons_s"
            app:layout_constraintStart_toEndOf="@+id/nav_icons_a"
            app:layout_constraintTop_toTopOf="parent"
            android:importantForAutofill="no"
            android:hint="@string/none"/>

        <RelativeLayout
            android:id="@+id/nav_icons_a"
            android:layout_width="16dp"
            android:layout_height="16dp"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_marginStart="21dp"
            android:layout_marginTop="13dp"
            android:layout_marginEnd="266dp"
            android:layout_marginBottom="16dp"
            android:background="@drawable/ic_attachment"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <!-- Nav Icons / Stickers -->
        <RelativeLayout
            android:id="@+id/nav_icons_s"
            android:layout_width="16dp"
            android:layout_height="16dp"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginTop="14dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:background="@drawable/ic_stickers"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/text_field_microphone_button"
        android:layout_width="16dp"
        android:layout_height="24dp"
        android:layout_marginEnd="36dp"

        android:layout_marginBottom="48dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@drawable/ic_sound_message">

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
